--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -114,12 +114,26 @@
     cursor: pointer;
 }
 
+.upload-btn {
+    min-width: 110px;
+    padding: 0 16px;
+    height: 36px;
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    border-radius: 2px;
+    margin-right: 1rem;
+
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+}
+
 .action-btn {
     color: #161823;
     font-size: 2.2rem;
     background-color: transparent;
     padding: 4px 12px;
     cursor: pointer;
+    line-height: 1rem;
 }
 
 .user-avatar {
