--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -3,12 +3,17 @@
     --search-height: 46px;
     --search-top-spacer: 9px;
     --search-button-width: 52px;
-
+    //Sắp xxeps thứ tự css: biến -> position -> width height box
+    position: fixed; //fix header
+    top: 0;
+    left: 0;
+    z-index: 10; //để nằm trên các nội dung khác
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
-    display: flex;
-    justify-content: center;
+    background-color: var(--white); // để ko bị trong suốt
 }
 .inner {
     height: 100%;
